--- a/src/components/ChatFilter/ChatFilter.scss
+++ b/src/components/ChatFilter/ChatFilter.scss
@@ -8,44 +8,10 @@
   justify-content: space-between;
   align-items: center;
 
-  &__search {
+  &__container {
     display: flex;
     flex-direction: column;
     width: 49%;
-    position: relative;
-  }
-
-  &__text {
-    font-size: 12px;
-    color: #000;
-    margin-bottom: 3px;
-  }
-
-  &__input {
-    color: $accent-color;
-    padding: 5px 25px 5px 5px;
-    border: 0;
-    border-radius: 5px;
-    outline: none;
-    width: 100%;
-    height: 25px;
-    font-size: 14px;
-    border: 1px solid $main-grey;
-  }
-
-  &__clear {
-    position: absolute;
-    background-color: $cancel-color;
-    width: 15px;
-    height: 15px;
-    border: 0;
-    border-radius: 50px;
-    right: 5px;
-    bottom: 5px;
-    cursor: pointer;
-  }
-
-  &__block {
     position: relative;
   }
 }
