--- a/src/components/TaskTable/TaskTable.scss
+++ b/src/components/TaskTable/TaskTable.scss
@@ -1,7 +1,7 @@
 @import "../../styles/utils/mixins.scss";
 @import "../../styles/utils/colors.scss";
 
-.block {
+.taskTableContainer {
   max-height: calc(100vh - 120px);
   min-height: calc(100vh - 120px);
   width: 100%;
@@ -30,6 +30,7 @@
     padding: 5px 10px;
     font-weight: 600;
     width: 10%;
+    text-align: left;
   }
 
   &__body {
