--- a/src/components/FormButtons/FormButtons.scss
+++ b/src/components/FormButtons/FormButtons.scss
@@ -11,7 +11,8 @@
     height: 40px;
     border-radius: 10px;
     color: #fff;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 600;
   }
 
   &__red {
